# test_task_packed_picking

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md  pyproject.toml
.github/workflows/: test.yml
src/stock_packed_picking/models/: stock_picking.py
src/stock_packed_picking/tests/: __init__.py
src/stock_packed_picking/views/: menu.xml
src/stock_packed_picking/wizards/: __init__.py
stock_packed_picking/: __manifest__.py
stock_packed_picking/models/: stock_picking.py
stock_packed_picking/security/: ir.model.access.csv
stock_packed_picking/tests/: test_packed_picking.py
stock_packed_picking/views/: menu.xml
stock_packed_picking/wizards/: stock_pack_products.py  stock_pack_products_line.py  stock_pack_products_views.xml
